--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LawBot</title>
+  <title>Pravo Helper</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     // Early theme apply to avoid FOUC
